--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
-DATABASE_USER=root
+DATABASE_USERNAME=root
 DATABASE_PASSWORD=1234
-DATABASE_DB=test
+DATABASE_NAME=test
