--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["es5", "es6", "es2020"],
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
