--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_USERNAME=root
-DATABASE_PASSWORD=12341234
+DATABASE_PASSWORD=1234
 DATABASE_NAME=test
 
 GRAPHQL_TYPE_PATH='./**/*.graphql'
