--- a/.env
+++ b/.env
@@ -1,7 +1,17 @@
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_USERNAME=root
-DATABASE_PASSWORD=1234
+DATABASE_PASSWORD=12341234
 DATABASE_NAME=test
 
 GRAPHQL_TYPE_PATH='./**/*.graphql'
+
+## google login config
+GOOGLE_CLIENT_ID=YOUR_CLIENT_ID
+GOOGLE_CLIENT_SECRET=YOUR_SECRET_KEY
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+
+## facebook login config
+FACEBOOK_CLIENT_ID=YOUR_CLIENT_ID
+FACEBOOK_CLIENT_SECRET=YOUR_SECRET_KEY
+FACEBOOK_CALLBACK_URL=http://localhost:3000/auth/facebook/callback
