--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "class-validator": "^0.13.2",
     "express-session": "^1.17.2",
     "graphql": "^16.3.0",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
+    "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -55,6 +57,7 @@
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
+    "@types/passport-kakao": "^0.2.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
